# drs3

./: .mandatory_files  .pre-commit-config.yaml  .static_files  Dockerfile  README.md  example-config.yaml  setup.cfg
.aws/: config  credentials
.devcontainer/: .dev_config.yaml  .drs3.yaml  .my-microservice.yaml  Dockerfile  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: check_openapi_spec.yaml  dev_cd.yaml  unit_and_int_tests.yaml
db_migration/alembic/: env.py
db_migration/alembic/versions/: 20211104_125153_b28851e1a2ea_copy_database_structure_from_sandbox.py  20211117_162939_7854bc67c695_simplify_drsobject.py  20211209_083053_dda104bd723f_switched_drs_id_to_file_id_made_size_.py
drs3/: __init__.py  __main__.py  config.py  models.py
drs3/api/: __init__.py  cors.py  main.py  openapi.yaml
drs3/core/: __init__.py  main.py
drs3/custom_openapi3/: __init__.py  custom_explorer_view.py
drs3/dao/: __init__.py  db.py  db_models.py
drs3/pubsub/: __init__.py  file_staged_for_download.json  main.py  publish.py  subscribe.py
drs3/pubsub/schemas/: __init__.py  drs_object_registered.json  file_internally_registered.json  file_staged_for_download.json  non_staged_file_requested.json  read_schemas.py
my_microservice/: __init__.py  __main__.py  config.py  models.py
my_microservice/api/: __init__.py  main.py
my_microservice/core/: greeting.py
my_microservice/dao/: db.py  db_models.py
scripts/: openapi_from_app.py
tests/fixtures/: __init__.py  config.py  psql.py  pubsub.py  s3.py  state.py  storage.py  test_config.yaml  utils.py
tests/integration/: __init__.py  test_api.py  test_pubsub.py
tests/integration/fixtures/: __init__.py  utils.py
tests/unit/: test_core.py  test_core_greeting.py  test_psql_db_dao.py  test_pubsub.py
tests/unit/fixtures/: config.py  greeting_expressions.yaml  greetings.py  main.py  psql_dao.py  storage.py  test_config.yaml  utils.py
